--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <title>Document</title>
     <div id="titleBox">
-    <h1 id="title"> Survey Form</h1>
-    <p id="description">Lorem Ipsum Description Ask ChatGPT</p>
+    <h1 id="title">Dead by Daylight Survey</h1>
+    <p id="description">The Dead by Daylight survey gathers player feedback to improve gameplay and community involvement.</p>
     </div>
 
     <link rel="stylesheet" href="styles.css">
@@ -21,8 +21,9 @@
                 <div class="flex-container" id="surveyBox">
                     <div class="form-group">
                         <form id="survey-form">
-                            <label for="name" id="name-label">
-                                <input id="name" type="text" placeholder="Mikaela Reid" required>Name</input>
+                            <label for="name" id="name-label"><span id="nameText">Name</span>
+                                <section></section>
+                                <input id="name" type="text" placeholder="Mikaela Reid" required></input>
                             </label>
                     </div>
                     <div class="form-group">
@@ -74,19 +75,25 @@
                     <!-- checkboxes -->
                     <div class="form-group">
                         <fieldset id="checkBoxes">
-                            <legend id="checkBoxQuestion">Hey Whadda Ya Know?</legend>
-                            <input type="checkbox" value="exampleCheck1" id="exampleCheck1">
-                            <label for="exampleCheck1">Check 1</label>
-                            <input type="checkbox" value="exampleCheck2" id="exampleCheck2">
-                            <label for="exampleCheck2">Check 2</label>
-                            <input type="checkbox" value="exampleCheck3" id="exampleCheck3">
-                            <label for="exampleCheck3">Check 3</label>
-                            <input type="checkbox" value="exampleCheck4" id="exampleCheck4">
-                            <label for="exampleCheck4">Check 4</label>
-                            <input type="checkbox" value="exampleCheck5" id="exampleCheck5">
-                            <label for="exampleCheck5">Check 5</label>
-                            <input type="checkbox" value="exampleCheck6" id="exampleCheck6">
-                            <label for="exampleCheck6">Check 6</label>
+                            <legend id="checkBoxQuestion">What would you like to see in the next update?</legend>
+                            <div class="flex-container">
+                            <input type="checkbox" class="text-shadow" value="exampleCheck1" id="exampleCheck1">
+                            <label for="exampleCheck1">New Killer</label>
+                            <section></section>
+                            <input type="checkbox" class="text-shadow" value="exampleCheck2" id="exampleCheck2">
+                            <label for="exampleCheck2">New Survivor</label>
+                            <section></section>
+                            <input type="checkbox" class="text-shadow" value="exampleCheck3" id="exampleCheck3">
+                            <label for="exampleCheck3">New Map</label>
+                            <section></section>
+                            <input type="checkbox" class="text-shadow" value="exampleCheck4" id="exampleCheck4">
+                            <label for="exampleCheck4">Bug Patch</label>
+                            <section></section>
+                            <input type="checkbox" class="text-shadow" value="exampleCheck5" id="exampleCheck5">
+                            <label for="exampleCheck5">Cosmetics</label>
+                            <section></section>
+                            <input type="checkbox" class="text-shadow" value="exampleCheck6" id="exampleCheck6">
+                            <label for="exampleCheck6">Event</label> </div>
                         </fieldset>
                     </div>
                     <!-- text field -->
@@ -95,7 +102,7 @@
                         <textarea id="textArea" name="textArea" rows="4" cols="50"></textarea>
                     </div>
                     <!-- submit button -->
-                    <button id="submit">Submit</button>
+                    <button id="submit"><strong>Submit</strong></button>
                     </form>
                 </div>
             </div>
