--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
     <title>Document</title>
     <div id="titleBox">
-    <h1 id="title">Dead by Daylight Survey</h1>
-    <p id="description">The Dead by Daylight survey gathers player feedback to improve gameplay and community involvement.</p>
+        <h1 id="title">Dead by Daylight Survey</h1>
+        <p id="description">The Dead by Daylight survey gathers player feedback to improve gameplay and community
+            involvement.</p>
     </div>
 
     <link rel="stylesheet" href="styles.css">
@@ -18,9 +19,10 @@
     <main>
         <div class="row">
             <div class="col">
-                <div class="flex-container" id="surveyBox">
+                <div class="flex-container" id="surveyBox"> 
+                     <form id="survey-form">
                     <div class="form-group">
-                        <form id="survey-form">
+                      
                             <label for="name" id="name-label"><span id="nameText">Name</span>
                                 <section></section>
                                 <input id="name" type="text" placeholder="Mikaela Reid" required></input>
@@ -33,7 +35,7 @@
                         </label>
                     </div>
                     <div class="form-group">
-                        <label for="number" id="number-label"><span >Number</span>
+                        <label for="number" id="number-label"><span>Number</span>
                             <section></section>
                             <input id="number" type="number" min="1" max="9999999999"
                                 placeholder="(958)555-0235"></input>
@@ -44,15 +46,15 @@
                     <div class="form-group">
                         <fieldset>
                             <legend>What system do you use mainly?</legend>
-                        <select id="dropdown">
-                            <option value="exampleOption">Please choose...</option>
-                            <option value="option1">PlayStation</option>
-                            <option value="option2">Xbox</option>
-                            <option value="option3">Steam</option>
-                            <option value="option4">Nintendo Switch</option>
-                            <option value="option5">Mobile</option>
-                        </select>
-                    </fieldset>
+                            <select id="dropdown">
+                                <option value="exampleOption">Please choose...</option>
+                                <option value="option1">PlayStation</option>
+                                <option value="option2">Xbox</option>
+                                <option value="option3">Steam</option>
+                                <option value="option4">Nintendo Switch</option>
+                                <option value="option5">Mobile</option>
+                            </select>
+                        </fieldset>
                     </div>
                     <!-- radio buttons -->
                     <div class="form-group">
@@ -77,23 +79,24 @@
                         <fieldset id="checkBoxes">
                             <legend id="checkBoxQuestion">What would you like to see in the next update?</legend>
                             <div class="flex-container">
-                            <input type="checkbox" class="text-shadow" value="exampleCheck1" id="exampleCheck1">
-                            <label for="exampleCheck1">New Killer</label>
-                            <section></section>
-                            <input type="checkbox" class="text-shadow" value="exampleCheck2" id="exampleCheck2">
-                            <label for="exampleCheck2">New Survivor</label>
-                            <section></section>
-                            <input type="checkbox" class="text-shadow" value="exampleCheck3" id="exampleCheck3">
-                            <label for="exampleCheck3">New Map</label>
-                            <section></section>
-                            <input type="checkbox" class="text-shadow" value="exampleCheck4" id="exampleCheck4">
-                            <label for="exampleCheck4">Bug Patch</label>
-                            <section></section>
-                            <input type="checkbox" class="text-shadow" value="exampleCheck5" id="exampleCheck5">
-                            <label for="exampleCheck5">Cosmetics</label>
-                            <section></section>
-                            <input type="checkbox" class="text-shadow" value="exampleCheck6" id="exampleCheck6">
-                            <label for="exampleCheck6">Event</label> </div>
+                                <input type="checkbox" class="text-shadow" value="exampleCheck1" id="exampleCheck1">
+                                <label for="exampleCheck1">New Killer</label>
+                                <section></section>
+                                <input type="checkbox" class="text-shadow" value="exampleCheck2" id="exampleCheck2">
+                                <label for="exampleCheck2">New Survivor</label>
+                                <section></section>
+                                <input type="checkbox" class="text-shadow" value="exampleCheck3" id="exampleCheck3">
+                                <label for="exampleCheck3">New Map</label>
+                                <section></section>
+                                <input type="checkbox" class="text-shadow" value="exampleCheck4" id="exampleCheck4">
+                                <label for="exampleCheck4">Bug Patch</label>
+                                <section></section>
+                                <input type="checkbox" class="text-shadow" value="exampleCheck5" id="exampleCheck5">
+                                <label for="exampleCheck5">Cosmetics</label>
+                                <section></section>
+                                <input type="checkbox" class="text-shadow" value="exampleCheck6" id="exampleCheck6">
+                                <label for="exampleCheck6">Event</label>
+                            </div>
                         </fieldset>
                     </div>
                     <!-- text field -->
